name:                fundb
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/fundb#readme
license:             BSD3
license-file:        LICENSE
author:              Jonathan Heek
maintainer:          example@example.com
copyright:           2017 Jonathan Heek
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       SmallArray
  build-depends:       base >= 4.7 && < 5
                     , array
                     , deepseq
                     , primitive
                     , random
  default-language:    Haskell2010

executable main
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fundb
                     , containers
                     , bytestring
  default-language:    Haskell2010

test-suite fundb-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fundb
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/fundb
